--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -22,23 +22,26 @@
         android:id="@+id/list_of_messages"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/fab"
+        android:layout_above="@+id/edit_layout"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="16dp"
         android:divider="@android:color/transparent"
         android:dividerHeight="16dp" />
-
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="wrap_content"
+        android:id="@+id/edit_layout"
+        android:hint="Input"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@+id/fab"
+        android:layout_height="wrap_content">
     <EditText
         android:id="@+id/input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/fab"
-        android:hint="Input"
         android:inputType="textCapSentences|textMultiLine"
-        android:maxLength="2000"
-        android:maxLines="4" />
+        />
+    </android.support.design.widget.TextInputLayout>
 
 </RelativeLayout>
